fix layer overlapping

--- a/public/scss/utils/_shame.scss
+++ b/public/scss/utils/_shame.scss
@@ -4,3 +4,7 @@
     vertical-align: bottom;
     width: 100px !important
 }
+
+.HolyGrail-body {
+    z-index: 2;
+}
